Fix margin collapsable header

--- a/src/scss/layout/_design.scss
+++ b/src/scss/layout/_design.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-top: 1px solid $color-line;
   margin: 0 20px 0 20px;
   @media all and (min-width: 768px) {
     margin: 0;
