--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -66,6 +66,7 @@
   }
   @media all and (min-width: 768px) {
     margin: 0;
+    margin-bottom: 30px;
   }
 }
 
